<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>keystroke</name>
  <version>0.1.1</version>
  <description>Capture keyboard input from the local computer and publish it to ROS</description>
  <maintainer email="dan@digilabs.io">Dan Rose</maintainer>
  <license>Apache License 2.0</license>

  <author email='info@roverrobotics.com'>Rover Robotics</author>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
