[metadata]
keywords = ROS, ROS2, RoverRobotics
classifiers =
    Framework :: ROS2
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: Python3
    License :: OSI Approved :: Apache Software License
    Topic :: Software Development

[options]
packages = find:
zip_safe = True
install_requires =
    pynput
    setuptools
tests_require = pytest
python_requires = >=3.5
build_scripts =
    executable = '/usr/bin/env python3'

[options.entry_points]
console_scripts =
    keystroke_listen = keystroke.listen:main
    keystroke_arrows_to_twist = keystroke.arrows_to_twist:main

[install]
install-scripts = $base/lib/keystroke